# x4explorer

./: LICENSE  README.md  pyproject.toml
src/x4explorer/: __init__.py  __main__.py  _app.py  _cli.py  _db.py  _pagination.py  _queries.py
src/x4explorer/_routes/: __init__.py  components.py  dashboard.py  datatypes.py  keywords.py  macros.py  scripts.py  wares.py
static/css/: custom.css
templates/: _pagination.html  _search_results.html  base.html  dashboard.html  index.html  search.html
templates/components/: _table.html  detail.html  list.html
templates/macros/: _table.html  detail.html  list.html
templates/scripts/: _datatypes_table.html  _keywords_table.html  datatype_detail.html  datatypes.html  keyword_detail.html  keywords.html
templates/wares/: _table.html  detail.html  list.html
tests/: conftest.py  test_app.py  test_components.py  test_dashboard.py  test_db.py  test_macros.py  test_pagination.py  test_queries.py  test_scripts.py  test_wares.py
