[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x4explorer"]

[project]
name = "x4explorer"
version = "0.1.0"
description = "Web interface for browsing X4: Foundations game data"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "starlette>=1.0",
    "jinja2>=3.1",
    "uvicorn>=0.30",
]

[project.urls]
Repository = "https://github.com/meethune/x4explorer"

[project.scripts]
x4explorer = "x4explorer:main"

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
